--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.25",
-    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
-    "react-slick": "^0.29.0",
     "react-typewriter-effect": "^1.1.0",
-    "slick-carousel": "^1.8.1",
+    "swiper": "^9.3.2",
     "typewriter-effect": "^2.20.1",
     "web-vitals": "^2.1.4"
   },
